Static/style.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap');
*{
    margin: 0;
    padding: 0;
    color: #f2f2f2;
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
}
nav{
    background: #222222;
    padding: 10px 40px 10px 70px;
    border: 1px solid #000;
    border-left: none;
    border-right: none;
}
nav ul{
    display: flex;
    list-style: none;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}
nav ul li.logo{
    flex: 1;
    font-size: 30px;
    font-weight: 700;
}
nav ul div.items{
    padding: 0 25px;
    display: inline-flex;
}
nav ul div.items a{
    text-decoration: none;
    font-size: 18px;
    padding: 0 12px;
}
nav ul div.items a:hover{
    color: cyan;
}
nav ul .search-icon{
    height: 40px;
    width: 240px;
    display: flex;
    background: #f2f2f2;
    border-radius: 5px;
}
nav ul .search-icon input{
    height: 100%;
    width: 200px;
    border: none;
    outline: none;
    padding: 0 10px;
    color: #000;
    font-size: 16px;
    border-radius: 5px 0 0 5px;
}
nav ul .search-icon .icon{
    height: 100%;
    width: 40px;
    line-height: 40px;
    text-align: center;
    border: 1px solid #cccccc;
    border-radius: 0 5px 5px 0;
    cursor: pointer;
}
nav ul .search-icon .icon:hover{
    background: #e6e6e6;
}
nav ul .search-icon .icon span{
    color: #222222;
    font-size: 18px;
}
nav ul li.btn{
    font-size: 29px;
    flex: 1;
    padding: 0 40px;
    display: none;
}
nav ul li.btn span{
    height: 42px;
    width: 42px;
    text-align: center;
    line-height: 42px;
    border: 1px solid #151515;
    border-radius: 5px;
    cursor: pointer;
}
nav ul li.btn span.show:before{
    content: '\f00d';
}
@media screen and (max-width: 1052px){
    nav{
        padding: 10px 40px 10px 0px;
    }
    nav ul li.logo{
        display: none;
    }
    nav ul div.items{
        flex: 4;
    }
}
@media screen and (max-width: 800px){
    nav ul li.btn{
        display: block;
    }
    nav{
        z-index: 1;
        padding: 9px 40px 9px 0;
    }
    nav ul div.items{
        z-index: -1;
        position: fixed;
        top: -220px;
        right: 0;
        width: 100%;
        background: #222222;
        display: inline-block;
        transition: top .4s;
    }
    nav ul div.items.show{
        top: 60px;
    }
    nav ul div.items li{
        text-align: center;
        line-height: 30px;
        margin: 30px 0;
    }
    nav ul div.items li a{
        font-size: 19px;
    }
}
@media screen and (max-width: 405px) {
    nav ul{
        flex-wrap: nowrap;
    }
    nav ul li.search{
        width: 50vmin;
    }
    nav ul li input{
        width: 40vmin;
    }
    nav ul li .search-icon{
        width: 10vmin;
    }
}
.content{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    width: 100%;
    padding: 0 40px;
    z-index: -2;
}
.content .text{
    font-size: 40px;
    font-weight: 800;
    padding: 5px 0;
    color: #202020;
}
.content .p{
    font-size: 28px;
    font-weight: 600;
    color: #202020;
}

footer{
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background: #222222;
}
.footerBottom{
    background-color: #151515;
    padding: 20px;
    text-align: center;
}
.footerBottom p{
    color: #fff;
}
.designer{
    opacity: 0.7;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-weight: 400;
    margin: 0px 5px;
}
@media (max-width: 700px) {
    footer .footerBottom{
        width: 100vmin;
    }
}










/*--------------------for login page---------------------------*/





body {
    font-family: Arial, sans-serif;
    background-color: #f2f2f2;
    margin: 0;
    padding: 0;
  }

  .container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
  }

  .form-wrapper {
    background-color: #fff;
    padding: 40px;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  }

  .form-title {
    text-align: center;
    font-size: 24px;
    margin-bottom: 20px;
  }

  .form-group {
    margin-bottom: 20px;
  }

  .form-group label {
    display: block;
    margin-bottom: 5px;
  }

  .form-group input {
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 3px;
  }

  .form-group input[type="submit"] {
    background-color: #4CAF50;
    color: white;
    cursor: pointer;
  }

  .form-group input[type="submit"]:hover {
    background-color: #45a049;
  }

  .form-group select {
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 3px;
  }

